--- a/htdocs/theme/raw/sass/layout/nav/_top-nav.scss
+++ b/htdocs/theme/raw/sass/layout/nav/_top-nav.scss
@@ -95,7 +95,7 @@
             display: none;
         }
         a {
-            @media (max-width: $screen-sm-min) {
+            @media (max-width: $screen-sm-min - 1) {
                 background-color: $state-warning-bg;
             }
         }
